tests/e2e/type_assignment_map_list.error
Error: syntax error in story at line 1, column None

1|    List[List[string]] a = {}
      ^^^^^^^^^^^^^^^^^^^^^^^^^

E0126: Type casting not supported between `Map[any,any]` and `List[List[string]]`.
